--- a/Source/Library.vcproj
+++ b/Source/Library.vcproj
@@ -84,12 +84,11 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Release|Win32"
+			Name="Debug|x64"
 			OutputDirectory="..\Lib"
 			IntermediateDirectory="..\..\Temp\$(SolutionName)_$(ProjectName)_$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="4"
 			CharacterSet="1"
-			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -105,19 +104,15 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
+				TargetEnvironment="3"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
-				InlineFunctionExpansion="2"
-				EnableIntrinsicFunctions="true"
-				FavorSizeOrSpeed="1"
-				OmitFramePointers="true"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
-				StringPooling="true"
-				RuntimeLibrary="2"
-				EnableFunctionLevelLinking="true"
-				EnableEnhancedInstructionSet="2"
+				Optimization="0"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
+				MinimalRebuild="true"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(OutDir)\$(ProjectName)$(ConfigurationName)_$(PlatformName).pdb"
 				WarningLevel="3"
@@ -154,11 +149,12 @@
 			/>
 		</Configuration>
 		<Configuration
-			Name="Debug|x64"
+			Name="Release|Win32"
 			OutputDirectory="..\Lib"
 			IntermediateDirectory="..\..\Temp\$(SolutionName)_$(ProjectName)_$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="4"
 			CharacterSet="1"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -174,15 +170,19 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
-				TargetEnvironment="3"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				Optimization="2"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
+				StringPooling="true"
+				RuntimeLibrary="2"
+				EnableFunctionLevelLinking="true"
+				EnableEnhancedInstructionSet="2"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(OutDir)\$(ProjectName)$(ConfigurationName)_$(PlatformName).pdb"
 				WarningLevel="3"
@@ -430,6 +430,34 @@
 	<References>
 	</References>
 	<Files>
+		<Filter
+			Name="Interface"
+			>
+			<File
+				RelativePath="..\Include\IFlashDX.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Implementation"
+			>
+			<File
+				RelativePath=".\Implementation\FlashDX.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Implementation\FlashDX.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Implementation\FlashDXPlayer.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Implementation\FlashDXPlayer.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\stdafx.cpp"
 			>
@@ -442,7 +470,7 @@
 				/>
 			</FileConfiguration>
 			<FileConfiguration
-				Name="Release|Win32"
+				Name="Debug|x64"
 				>
 				<Tool
 					Name="VCCLCompilerTool"
@@ -450,7 +478,7 @@
 				/>
 			</FileConfiguration>
 			<FileConfiguration
-				Name="Debug|x64"
+				Name="Release|Win32"
 				>
 				<Tool
 					Name="VCCLCompilerTool"
