--- a/Samples/SwfViewer/SwfViewer/SwfViewer.vcproj
+++ b/Samples/SwfViewer/SwfViewer/SwfViewer.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="SwfViewer"
 	ProjectGUID="{227ADD25-6EDB-4F56-A2DE-758F5BC80BDE}"
 	RootNamespace="SwfViewer"
@@ -41,6 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="$(DXSDK_DIR)Include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -62,6 +63,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="d3d9.lib"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="$(DXSDK_DIR)Lib\x86"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -115,6 +117,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
+				AdditionalIncludeDirectories="$(DXSDK_DIR)Include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -135,6 +138,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="d3d9.lib"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="$(DXSDK_DIR)Lib\x86"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
