FlashDXPlayerBind is renamed to ASInterface

--- a/branches/reutskyy/newinterface/Source/FlashDX.vcproj
+++ b/branches/reutskyy/newinterface/Source/FlashDX.vcproj
@@ -440,7 +440,7 @@
 			Name="Interface"
 			>
 			<File
-				RelativePath="..\Include\FlashDXPlayerBind.h"
+				RelativePath="..\Include\ASInterface.h"
 				>
 			</File>
 			<File
