--- a/trunk/Samples/GUI/GUI.vcproj
+++ b/trunk/Samples/GUI/GUI.vcproj
@@ -124,7 +124,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="$(DXSDK_DIR)Include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;CONFIGURATION_NAME=\&quot;$(ConfigurationName)\&quot;;PLATFORM_NAME=\&quot;$(PlatformName)\&quot;"
+				PreprocessorDefinitions="WIN32;WIN64;_DEBUG;_WINDOWS;CONFIGURATION_NAME=\&quot;$(ConfigurationName)\&quot;;PLATFORM_NAME=\&quot;$(PlatformName)\&quot;"
 				StringPooling="true"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -292,7 +292,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				AdditionalIncludeDirectories="$(DXSDK_DIR)Include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;CONFIGURATION_NAME=\&quot;$(ConfigurationName)\&quot;;PLATFORM_NAME=\&quot;$(PlatformName)\&quot;"
+				PreprocessorDefinitions="WIN32;WIN64;NDEBUG;_WINDOWS;CONFIGURATION_NAME=\&quot;$(ConfigurationName)\&quot;;PLATFORM_NAME=\&quot;$(PlatformName)\&quot;"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
@@ -460,7 +460,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="$(DXSDK_DIR)Include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;CONFIGURATION_NAME=\&quot;$(ConfigurationName)\&quot;;PLATFORM_NAME=\&quot;$(PlatformName)\&quot;"
+				PreprocessorDefinitions="WIN32;WIN64;NDEBUG;_WINDOWS;CONFIGURATION_NAME=\&quot;$(ConfigurationName)\&quot;;PLATFORM_NAME=\&quot;$(PlatformName)\&quot;"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
